--- a/app/package.json
+++ b/app/package.json
@@ -82,6 +82,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@formatjs/cli": "^6.0.4",
     "@testing-library/jest-dom": "^5.16.5",
